# WMLUncertaintyAnalysis

./: README.md
PVInterpolateToSurface/: CMakeLists.txt  plugin.cmake  pqInterpolateToSurfaceFilter.cxx  pqInterpolateToSurfaceFilter.h  vtkInterpolateToSurfaceFilter.cxx  vtkInterpolateToSurfaceFilter.h  vtkInterpolateToSurfaceFilter_SM.xml
PyGPC_files/: FOAMSim.py  WMLSensitivityAnalysis.py
Rscripts/: two-way_anova_brainsize-group_WML.r  wml_sensitivity_analysis_plotting_from_CSV.r  wml_sensitivity_analysis_posthoc_tests.r  wml_sensitivity_analysis_roi_CSV_output.r
WMLcase_dummy/: Field_template  runSim.sh
WMLcase_dummy/0_orig/: ElPot  sigma
WMLcase_dummy/system/: createBafflesDict  fvSolution
WMLcase_dummy_F0/: interpolate_to_midlayer_and_retrieve_values.sh  setup_case.sh
WMLcase_dummy_F0/system/: fvSchemes  setFieldsDict
WMLcase_dummy_F1-F3/: interpolate_to_midlayer_and_retrieve_values.sh  workflow.txt
WMLcase_dummy_F1-F3/system/: setFieldsDict
helper_scripts/: setupOFcase.sh
